// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Disabled, rendering 1`] = `
.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c1 {
  color: #dde1e4;
  line-height: 0;
}

.c1 ~ span {
  margin-left: 0.25rem;
  font-weight: normal;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  vertical-align: middle;
  max-width: 32rem;
  min-height: 36px;
  line-height: inherit;
  font-family: inherit;
  background-color: transparent;
  border-radius: 4px;
  border-width: 1px;
  border-style: solid;
  border-color: #dde1e4;
  -webkit-transition: 0.125s box-shadow ease-out;
  transition: 0.125s box-shadow ease-out;
  font-size: 16px;
  margin: 0px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  width: 100%;
  color: inherit;
  background-color: transparent;
  border-style: none;
  display: none;
  padding: 0;
}

.c2::-ms-clear {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:focus {
  outline: none;
  border-color: #2d9ee4;
  box-shadow: 0 0 0 2px #add9f5;
}

.c2[type='select'] {
  background: #fff url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23606e77' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right .75rem center;
  background-size: .5rem;
}

.c2:focus {
  box-shadow: none;
}

.c2:checked ~ svg {
  color: #2d9ee4;
}

.c2:disabled ~ svg {
  color: #dde1e4;
}

.c0 {
  font-family: Averta,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  line-height: 1.4;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    checked={undefined}
    className="c1"
    disabled={true}
  >
    <input
      className="c2"
      color="inherit"
      disabled={true}
      fontSize={2}
      id="radio-input"
      type="radio"
    />
    <svg
      className="c3"
      fill="currentcolor"
      height={24}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z "
      />
    </svg>
  </div>
</div>
`;

exports[`Radio Not Selected, rendering 1`] = `
.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c1 {
  color: #dde1e4;
  line-height: 0;
}

.c1:hover {
  color: #2d9ee4;
}

.c1 ~ span {
  margin-left: 0.25rem;
  font-weight: normal;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  vertical-align: middle;
  max-width: 32rem;
  min-height: 36px;
  line-height: inherit;
  font-family: inherit;
  background-color: transparent;
  border-radius: 4px;
  border-width: 1px;
  border-style: solid;
  border-color: #dde1e4;
  -webkit-transition: 0.125s box-shadow ease-out;
  transition: 0.125s box-shadow ease-out;
  font-size: 16px;
  margin: 0px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  width: 100%;
  color: inherit;
  background-color: transparent;
  border-style: none;
  display: none;
  padding: 0;
}

.c2::-ms-clear {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:focus {
  outline: none;
  border-color: #2d9ee4;
  box-shadow: 0 0 0 2px #add9f5;
}

.c2[type='select'] {
  background: #fff url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23606e77' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right .75rem center;
  background-size: .5rem;
}

.c2:focus {
  box-shadow: none;
}

.c2:checked ~ svg {
  color: #2d9ee4;
}

.c2:disabled ~ svg {
  color: #dde1e4;
}

.c0 {
  font-family: Averta,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  line-height: 1.4;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    checked={undefined}
    className="c1"
    disabled={undefined}
  >
    <input
      className="c2"
      color="inherit"
      fontSize={2}
      id="radio-input"
      type="radio"
    />
    <svg
      className="c3"
      fill="currentcolor"
      height={24}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z "
      />
    </svg>
  </div>
</div>
`;

exports[`Radio Selected, rendering 1`] = `
.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c1 {
  color: #dde1e4;
  line-height: 0;
}

.c1 ~ span {
  margin-left: 0.25rem;
  font-weight: normal;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  vertical-align: middle;
  max-width: 32rem;
  min-height: 36px;
  line-height: inherit;
  font-family: inherit;
  background-color: transparent;
  border-radius: 4px;
  border-width: 1px;
  border-style: solid;
  border-color: #dde1e4;
  -webkit-transition: 0.125s box-shadow ease-out;
  transition: 0.125s box-shadow ease-out;
  font-size: 16px;
  margin: 0px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  width: 100%;
  color: inherit;
  background-color: transparent;
  border-style: none;
  display: none;
  padding: 0;
}

.c2::-ms-clear {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:focus {
  outline: none;
  border-color: #2d9ee4;
  box-shadow: 0 0 0 2px #add9f5;
}

.c2[type='select'] {
  background: #fff url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23606e77' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right .75rem center;
  background-size: .5rem;
}

.c2:focus {
  box-shadow: none;
}

.c2:checked ~ svg {
  color: #2d9ee4;
}

.c2:disabled ~ svg {
  color: #dde1e4;
}

.c0 {
  font-family: Averta,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  line-height: 1.4;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    checked={true}
    className="c1"
    disabled={undefined}
  >
    <input
      checked={true}
      className="c2"
      color="inherit"
      fontSize={2}
      id="radio-input"
      type="radio"
    />
    <svg
      className="c3"
      fill="currentcolor"
      height={24}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z "
      />
    </svg>
  </div>
</div>
`;
